Изменил текст на странице

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                         <div class="hi__body">
                             <div class="hi__title">Привет, друг!</div>
                             <ul class="list">
-                                <li>У тебя все получится!</li>
-                                <li>Никогда не сдавайся!</li>
+                                <li>У </li>
+                                <li>Никогда</li>
                                 <li>Сегодня ты уже знаешь больше чем вчера!</li>
                                 <li>Спасибо тебе за поддержку!</li>
                             </ul>
